fix book cards overflowing onto prev/next page buttons

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -44,6 +44,8 @@
 
 .listlink a {
     color: rgb(54, 54, 54);
+    background-color: yellow;
+
 }
 
 .listlink:hover {
